--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <link rel="stylesheet" href="style.css">
     <style>
         * {
             box-sizing: border-box;
@@ -50,6 +50,16 @@
 
 </head>
 <body>
+<header>
+    <nav>
+        <ul class="navigation">
+            <li class="navigation-item"><a href="/">TweenMax1</a></li>
+            <li class="navigation-item"><a href="index1.html">TweenMax2</a></li>
+            <li class="navigation-item"><a href="">TweenMax3</a></li>
+            <li class="navigation-item"><a href="">TweenMax4</a></li>
+        </ul>
+    </nav>
+</header>
 <div class="example">
     <div class="example__ball"></div>
     <h1 class="example__title">GSAP is Cool!</h1>
