--- a/index1.html
+++ b/index1.html
@@ -53,7 +53,7 @@
 <header>
     <nav>
         <ul class="navigation">
-            <li class="navigation-item"><a href="/">TweenMax1</a></li>
+            <li class="navigation-item"><a href="index.html">TweenMax1</a></li>
             <li class="navigation-item"><a href="index1.html">TweenMax2</a></li>
             <li class="navigation-item"><a href="">TweenMax3</a></li>
             <li class="navigation-item"><a href="">TweenMax4</a></li>
