--- a/index1.html
+++ b/index1.html
@@ -55,7 +55,7 @@
         <ul class="navigation">
             <li class="navigation-item"><a href="index.html">TweenMax1</a></li>
             <li class="navigation-item"><a href="index1.html">TweenMax2</a></li>
-            <li class="navigation-item"><a href="">TweenMax3</a></li>
+            <li class="navigation-item"><a href="index2.html">TweenMax3</a></li>
             <li class="navigation-item"><a href="">TweenMax4</a></li>
         </ul>
     </nav>
