--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-<header>
+<!--<header>
     <nav>
         <ul class="navigation">
             <li class="navigation-item"><a href="/">TweenMax1</a></li>
@@ -16,7 +16,7 @@
             <li class="navigation-item"><a href="">TweenMax4</a></li>
         </ul>
     </nav>
-</header>
+</header>-->
 <div class="main">
     <div class="my-element">
         <p>Анимируем элемент DOM с классом my-element. Через несколько секунд анимации с элементом что-то произойдёт.</p>
