--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>GSAP-test2</title>
     <link rel="stylesheet" href="style.css">
     <style>
         * {
@@ -64,7 +64,8 @@
     <div class="example__ball"></div>
     <h1 class="example__title">GSAP is Cool!</h1>
 </div>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/jquery.gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"></script>
@@ -77,12 +78,13 @@
 
     // scale down the text
     // and hide it before the animation begins
-    tl.set(".example__title", {
+    tl
+        .set(".example__title", {
             scale: 0.2,
             autoAlpha: 0
         })
-        // scale the circle shape down before
-        // the animation begins
+    // scale the circle shape down before
+    // the animation begins
         .set(".example__ball", {
             scale: 0.2
         })
@@ -102,7 +104,7 @@
             autoAlpha: 1,
             scale: 1,
             ease: Back.easeOut.config(4)
-        },'+=2');
+        }, '+=2');
 </script>
 
 
