--- a/index2.html
+++ b/index2.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GSAP-test</title>
+    <title>GSAP-test3</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <style>
+        body {
+            background-color: #000;
+            color: #fff;
+        }
+    </style>
 
 </head>
 <body>
@@ -18,20 +27,146 @@
     </nav>
 </header>
 <div class="main">
-    <div class="my-element">
-        <p>Анимируем элемент DOM с классом my-element. Через несколько секунд анимации с элементом что-то произойдёт.</p>
-    </div>
-    <div class="myButton-cont">
-        <div class="myButton">Выровнять</div>
-    </div>
+    <div class="demo-cont">
+        <div id="demo">
+            <div id="demoBackground">
+                <div id="logo"></div>
+                <div id="txtContainer"></div>
+            </div>
+        </div>
 
+        <div class="sliderHolder">
+            <p class="output">progress(): <span id="progressValue"></span><span style="float:right;">time(): <span
+                    id="timeValue"></span></span></p>
+            <div id="progressSlider" class="slider"></div>
+        </div>
 
+        <div class="sliderHolder" style="margin-left:80px;">
+            <p class="output">totalProgress(): <span id="totalProgressValue"></span><span style="float:right;">totalTime(): <span
+                    id="totalTimeValue"></span></span></p>
+            <div id="totalProgressSlider" class="slider"></div>
+        </div>
+
+        <input type="button" id="restartBtn" style="margin:36px;" value="restart()">
+    </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/jquery.gsap.min.js"></script>
+
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/jquery.gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/easing/EasePack.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"></script>-->
+
+<script src="https://code.jquery.com/jquery-latest.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+
 <script src="main.js"></script>
+
+<script>
+    $(window).ready(function() {
+
+
+        var logo = $("#logo"),
+            progressValue = $("#progressValue"),
+            totalProgressValue = $("#totalProgressValue"),
+            timeValue = $("#timeValue"),
+            totalTimeValue = $("#totalTimeValue"),
+            restartBtn = $("#restartBtn"),
+            txtContainer = $("#txtContainer"),
+            tl,
+            progressSlider,
+            totalProgressSlider,
+            txt;
+
+        /* config sliders */
+
+        progressSlider = $("#progressSlider").slider({
+            range: false,
+            min: 0,
+            max: 100,
+            step:.1,
+            slide: function ( event, ui ) {
+                tl.pause();
+                tl.progress( ui.value/100 );
+            }
+        });
+
+        totalProgressSlider = $("#totalProgressSlider").slider({
+            range: false,
+            min: 0,
+            max: 100,
+            step:.1,
+            slide: function ( event, ui ) {
+                tl.pause();
+                tl.totalProgress( ui.value/100 );
+            }
+        });
+
+        /* build DOM elements - this example was done before GreenSock's SplitText tool was created, so it uses a more primitave way of splitting the text string apart into <div> elements, but since we don't need any bells or whistles like absolute positioning or words/lines wrapping, etc., this technique is fine*/
+
+        function splitText(phrase) {
+            var prevLetter, sentence,
+                sentence = phrase.split("");
+            $.each(sentence, function(index, val) {
+                if(val === " "){
+                    val = "&nbsp;";
+                }
+                var letter = $("<div/>", {
+                    id : "txt" + index
+                }).addClass('txt').html(val).appendTo(txtContainer);
+
+                if(prevLetter) {
+                    $(letter).css("left", ($(prevLetter).position().left + $(letter).width()) + "px");
+                };
+                prevLetter = letter;
+            });
+            txt = $(".txt");
+        }
+
+        function buildTimeline() {
+
+            //note this timeline uses 3D transforms which will only work in recent versions of Safari, Chrome, and FireFox. IE10 will support 3D transforms as well. All other browsers simply will not show those properties being tweened.
+
+            TweenLite.set(txtContainer, {css:{perspective:500}});
+
+            tl = new TimelineMax({onUpdate:updateUI, repeat:2, repeatDelay:1, yoyo:true});
+            tl.from(logo, 0.5, {left:'-=60px', ease:Back.easeOut});
+            tl.staggerFrom(txt, 0.4, {alpha:0}, 0.06, "textEffect");
+            tl.staggerFrom(txt, 0.8, {rotationY:"-270deg", top:80, transformOrigin: "50% 50% -80", ease:Back.easeOut}, 0.06, "textEffect");
+            tl.staggerTo(txt, 0.6, {rotationX:"360deg", color:"#90e500", transformOrigin:"50% 50% 10"}, 0.02);
+        }
+
+        /* callbacks */
+
+        function updateUI() {
+            //change slider value
+            progressSlider.slider("value", tl.progress() *100);
+            totalProgressSlider.slider("value", tl.totalProgress() *100);
+
+            //update display of values
+            progressValue.html(tl.progress().toFixed(2));
+            totalProgressValue.html(tl.totalProgress().toFixed(2));
+            timeValue.html(tl.time().toFixed(2));
+            totalTimeValue.html(tl.totalTime().toFixed(2));
+        }
+
+        restartBtn.click(function() {
+            //Start playing from a progress of 0.
+            tl.restart();
+        });
+
+        function init() {
+            splitText("We Hope You Enjoyed the Tour");
+            buildTimeline();
+            //show the demoBackground div after DOM is ready and all images loaded
+            TweenLite.set($("#demoBackground"), {visibility:"visible"});
+        }
+        init();
+    });
+    console.log('fsafsdfgdfs')
+    //cmd-0 to restart
+</script>
+
+
 </body>
 </html>
