--- a/index3.html
+++ b/index3.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>GSAP-test</title>
+    <title>GSAP-test4</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
 <header>
