--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <header>
     <nav>
         <ul class="navigation">
-            <li class="navigation-item"><a href="/">TweenMax1</a></li>
+            <li class="navigation-item"><a href="index.html">TweenMax1</a></li>
             <li class="navigation-item"><a href="index1.html">TweenMax2</a></li>
             <li class="navigation-item"><a href="index2.html">TweenMax3</a></li>
-            <li class="navigation-item"><a href="">TweenMax4</a></li>
+            <li class="navigation-item"><a href="index3.html">TweenMax4</a></li>
         </ul>
     </nav>
 </header>
