--- a/index3.html
+++ b/index3.html
@@ -8,28 +8,29 @@
 <header>
     <nav>
         <ul class="navigation">
-            <li class="navigation-item"><a href="/">TweenMax1</a></li>
+            <li class="navigation-item"><a href="index.html">TweenMax1</a></li>
             <li class="navigation-item"><a href="index1.html">TweenMax2</a></li>
             <li class="navigation-item"><a href="index2.html">TweenMax3</a></li>
-            <li class="navigation-item"><a href="">TweenMax4</a></li>
+            <li class="navigation-item"><a href="index3.html">TweenMax4</a></li>
         </ul>
     </nav>
 </header>
 <div class="main">
-    <div class="my-element">
-        <p>Анимируем элемент DOM с классом my-element. Через несколько секунд анимации с элементом что-то произойдёт.</p>
-    </div>
-    <div class="myButton-cont">
-        <div class="myButton">Выровнять</div>
-    </div>
-
 
 </div>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/jquery.gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/easing/EasePack.min.js"></script>
 <script src="main.js"></script>
+
+<script>
+
+
+
+</script>
+
 </body>
 </html>
