--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <li class="navigation-item"><a href="index1.html">TweenMax2</a></li>
             <li class="navigation-item"><a href="index2.html">TweenMax3</a></li>
             <li class="navigation-item"><a href="index3.html">TweenMax4</a></li>
+            <li class="navigation-item"><a href="index4.html">TweenMax5</a></li>
+            <li class="navigation-item"><a href="index5.html">TweenMax6</a></li>
         </ul>
     </nav>
 </header>
