--- a/index4.html
+++ b/index4.html
@@ -2,66 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GSAP-test4</title>
+    <title>GSAP-test5</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <style>
         body {
             background-color: #000;
+            color: #fff;
         }
 
         #demo {
             width: 692px;
-            height: 70px;
+            height: 100px;
             background-color: #333;
             padding: 8px;
         }
 
         #demoBackground {
-            position: absolute;
+            position: relative;
             background-color: #000;
             overflow: hidden;
             width: 692px;
-            height: 70px;
+            height: 100px;
             visibility: hidden;
         }
 
-        .logo {
-            position: relative;
+        #logo {
+            position: absolute;
             background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/logo_black_1.jpg) no-repeat;
             height: 60px;
             width: 60px;
             top: 6px;
-            margin-right: 4px;
-            display: inline-block;
-            /* IE7 inline-block fix */
-            zoom: 1;
-            *display: inline;
         }
 
-        #logosWrapper {
-            position: absolute;
-            width: 732px;
-            height: 70px;
+        .sliderHolder {
+            margin-top: 16px;
+            float: left;
+            width: 280px;
+
         }
 
-        #skew {
-            position: absolute;
-            background: url(https://s.cdpn.io/16327/skew_234x60.png) no-repeat;
-            left: 250px;
-            top: 5px;
-            width: 234px;
-            height: 60px;
-            overflow: hidden;
+        .sliderHolder p {
+            margin: 0px;
+            font-size: 14px;
         }
 
         .slider {
-            width: 734px;
-            height: 15px;
+            width: 270px;
             margin: 4px 0px 8px 6px;
         }
 
-        button {
+        #txtContainer {
+            position: absolute;
+            left: 65px;
+            top: 14px;
+        }
+
+        .txt {
+            font: 36px monospace;
+            position: absolute;
+            color: #afafaf;
+            font-weight: bold;
+            left: 0px;
+            top: 0;
+        }
+
+        input[type="button"] {
             -webkit-appearance: button;
             padding: 5px;
             margin-right: 5px;
@@ -87,40 +93,37 @@
     <div class="demo-cont">
         <div id="demo">
             <div id="demoBackground">
-                <div id="logosWrapper">
-                    <div class="logo"></div>
-                    <div class="logo"></div>
-                    <div class="logo"></div>
-                    <div class="logo"></div>
-                    <div class="logo"></div>
-                    <div class="logo"></div>
-                    <div class="logo"></div>
-                    <div class="logo"></div>
-                    <div class="logo"></div>
-                    <div class="logo"></div>
-                </div>
-                <div id="skew"></div>
-                <div id="dotContainer"></div>
+                <div id="logo"></div>
+                <div id="txtContainer"></div>
             </div>
         </div>
 
-        <button id="skewBtn">tl.play("skew")</button>
-        <button id="staggerBtn">tl.play("stagger")</button>
-        <button id="particlesBtn">tl.play("particles")</button>
+        <div class="sliderHolder">
+            <p class="output">progress(): <span id="progressValue"></span><span style="float:right;">time(): <span
+                    id="timeValue"></span></span></p>
+            <div id="progressSlider" class="slider"></div>
+        </div>
+
+        <div class="sliderHolder" style="margin-left:80px;">
+            <p class="output">totalProgress(): <span id="totalProgressValue"></span><span style="float:right;">totalTime(): <span
+                    id="totalTimeValue"></span></span></p>
+            <div id="totalProgressSlider" class="slider"></div>
+        </div>
+
+        <input type="button" id="restartBtn" style="margin:36px;" value="restart()">
     </div>
+
+
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
+        integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
+        crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/jquery.gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/easing/EasePack.min.js"></script>
 <script src="main.js"></script>
-
-<script>
-
-
-</script>
-
 </body>
 </html>
